<resources>
    <string name="app_name">List Tracker</string>
    <string name="open_list">Open List</string>
    <string name="create_list">Create List</string>
    <string name="delete_list">Delete List</string>
    <string name="category">Category:</string>
    <string name="category_name"></string>
    <string name="add_category">Add category name</string>
    <string name="add_list">Add list name</string>
    <string name="add_item">Add Item</string>
    <string name="view_item">View Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="list_name">List Name</string>
    <string name="list">List:</string>
    <string name="label_item_name">Item Name:</string>
    <string name="label_item_tags">Tags:</string>
    <string name="label_item_notes">Notes:</string>
    <string name="item_within">Item within</string>
    <string name="due_date">Due Date:</string>
    <string name="last_modified">Last Modified:</string>
    <string name="created">Item Created:</string>
    <string name="date_filler">[Date]</string>
    <string name="images">Images:</string>
    <string name="create_category">Create Category</string>
    <string name="load_category">Load Category</string>
    <string name="delete_category">Delete Category</string>
    <string name="all_categories">All Categories</string>
    <string name="save_item">Save Item</string>
    <string name="priority_number">Priority #:</string>
    <string name="completed">Completed</string>
    <string name="priority_label">Priority Name:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="rename_list">Rename List</string>
    <string name="rename_category">Rename Category</string>
    <string name="save_new_list">Save New List</string>
    <string name="save_new_category">Save New Category</string>
    <string name="view_categories">View Categories</string>
    <string name="dummy_image">Android logo</string>
    <string name="sort_category">Sort Category</string>
    <string name="sort_list">Sort List</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_modified">Sort by modified date</string>
    <string name="sort_manual">Manual sort</string>
    <string name="choose_category_sort_order">Choose Sort Order:</string>
    <string name="choose_list_sort_order">Choose Sort Order:</string>
    <string name="save_sort">Save Sort Order</string>
    <string name="add_image">Add</string>
    <string name="delete_image">Delete Thumb 1</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="choose_reminder_date">Choose Reminder Date</string>
    <string name="save_reminder_date">Save Reminder Date</string>
    <string name="copy_item">Copy Item</string>
    <string name="copy_list">Copy List</string>
    <string name="copy_list_to_what_category">Copy List to What Category?</string>
    <string name="copy_item_to_what_list">Copy Item to What List?</string>
    <string name="save_copy_to_new_location">Save Copy to New Location</string>
    <string name="example_category_name">Example Category Name</string>
    <string name="example_list_name">Example List Name</string>
    <string name="image_gallery_for_list">Images from List:</string>
    <string name="view_image_gallery">View Image Gallery</string>
    <string name="move_list">Move List</string>
    <string name="save_to_new_location">Save to New Location</string>
    <string name="move_list_to_what_category">Move List to What Category?</string>
    <string name="move_to">Move to:</string>
    <string name="move_item_to_what_list">Move Item to What List?</string>
    <string name="move_item">Move Item</string>
    <string name="search_hint">Search Lists or Items</string>
    <string name="search_list_text">Lists</string>
    <string name="search_item_text">Items</string>
    <string name="increment_thumbnails_button">&gt;</string>
    <string name="decrement_thumbnails_button">&lt;</string>
</resources>
