<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.byui_cs246_team07.listtracker.ListActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/gallery_toolbar"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Theme.AppCompat.Light"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/btnViewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:onClick="loadItem"
        android:text="@string/view_item"
        app:layout_constraintBottom_toTopOf="@+id/btnAddItem"
        app:layout_constraintEnd_toStartOf="@+id/moveItem"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:onClick="createItem"
        android:text="@string/add_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCopyItem"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDeleteItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="deleteItem"
        android:text="@string/delete_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCopyItem"
        app:layout_constraintTop_toTopOf="@+id/btnAddItem" />

    <TextView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/list"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/listNameInListScreen"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/listNameInListScreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName"
        android:text="@string/list_name"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/list"
        app:layout_constraintTop_toBottomOf="@+id/gallery_toolbar" />

    <ListView
        android:id="@+id/listOfItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/btnViewItem"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSortList" />

    <Button
        android:id="@+id/btnRenameList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:onClick="renameList"
        android:text="@string/rename_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSortList"
        app:layout_constraintTop_toBottomOf="@+id/listNameInListScreen" />

    <Button
        android:id="@+id/btnSortList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="sortList"
        android:text="@string/sort_list"
        app:layout_constraintEnd_toStartOf="@+id/btnRenameList"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listNameInListScreen" />

    <Button
        android:id="@+id/btnCopyItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="copyItem"
        android:text="@string/copy_item"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteItem"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAddItem"
        app:layout_constraintTop_toTopOf="@+id/btnAddItem" />

    <Button
        android:id="@+id/viewImageGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="viewImageGallery"
        android:text="@string/view_image_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/moveItem"
        app:layout_constraintTop_toTopOf="@+id/btnViewItem" />

    <Button
        android:id="@+id/moveItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="moveItem"
        android:text="@string/move_item"
        app:layout_constraintEnd_toStartOf="@+id/viewImageGallery"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnViewItem"
        app:layout_constraintTop_toTopOf="@+id/btnViewItem" />
</android.support.constraint.ConstraintLayout>
