<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.byui_cs246_team07.listtracker.ListCreationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/gallery_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/Theme.AppCompat.Light"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/newList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/list"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/newListName"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/newListName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/add_list"
        android:inputType="textPersonName"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/newList"
        app:layout_constraintTop_toBottomOf="@+id/gallery_toolbar" />

    <Button
        android:id="@+id/btnSaveNewList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="addList"
        android:text="@string/save_new_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newListName" />
</android.support.constraint.ConstraintLayout>
